@@ -1,3 +1,6 @@
+2375 [OneClick] fixed anamorphic encodings (regression of 2357) 
+2373 [MP4 Muxer] default GPAC string will be erased
+2372 [MP4 Muxer] added TTXT Subtitles Files support. Feature request #437
 2370 [OneClick] fixed "close after Go!" in batch mode
 2369 [x264] disabled direct mp4 output as the official builds do not have this support enabled
 2368 [OneClick] fixed internal chapters wrongly detected in VOB files
